--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/router": "0.0.1-beta.119",
     "amazon-cognito-identity-js": "^6.3.5",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "file-saver": "^2.0.5",
@@ -30,6 +31,7 @@
     "primereact": "^9.6.1",
     "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
+    "react-bootstrap": "^2.9.2",
     "react-charts": "^3.0.0-beta.55",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
